# mitch_v2_driver

./: CMakeLists.txt  README.md  package.xml
include/mitch_v2_driver/: MitchV2_Request.h  MitchV2_SerialConnection.h
launch/: battery.launch  get_firmware_version.launch  mitch_v2.launch  shutdown.launch  stop_transmission.launch
src/: battery.cpp  firmware_version.cpp  mitch_v2.cpp  shutdown.cpp  stop_transmission.cpp
src/internal/: MitchV2_Request.cpp  MitchV2_SerialConnection.cpp
srv/: FirmwareVersion.srv
